# cas

./: .gitignore  .reality-check  ARCHITECTURE.md  LICENSE  NOTICE  README.md  SECURITY.md  dev_server.py  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
agents/: workspace-gen.yaml
cmd/cas/: main.go
docs/: cas-concept.md  remote-architecture.md  roadmap.md  session-2026-04-05.md  session-2026-04-26.md  session-2026-05-20.md  session-2026-05-20b.md
docs/concepts/: app-ingestion.md
internal/agent/: agent.go  agent_test.go  mcp_agent.go  orchestrator.go  orchestrator_test.go  web_agent.go
internal/conductor/: conductor.go  conductor_test.go
internal/contract/: contract.go
internal/intent/: detect.go  detect_test.go
internal/llm/: llm.go  llm_test.go
internal/mcp/: client.go
internal/plugin/: plugin.go  plugin_test.go
internal/runner/: runner.go  runner_test.go
internal/shell/: handlers.go  helpers.go  ingest.go  orchestrate.go  reconnect.go  resolve.go  resolve_test.go  router.go  shell.go  shell_test.go
internal/store/: memory.go  orchestration_test.go  sqlite.go  store.go
internal/webview/: browser.go  browser_test.go
internal/workspace/: workspace.go  workspace_test.go
src/cas/: api.py  (+12 more)
tests/: conftest.py  test_api.py  test_audit_export.py  test_conductor.py  test_contracts.py  test_execution.py  test_history.py  test_model_routing.py  test_protocols.py  test_session_context.py  test_shell.py  test_store.py  test_store_integration.py  test_stream.py  test_workspace_types.py  test_workspaces.py
ui/: model.go  model_test.go
(+2 files in other folders)
